37 implement box buffer communication (#41)
* Added DroneBuffer to system

Signed-off-by: DavidExinor <114293333+DavidExinor@users.noreply.github.com>

* Implemented communication buffers, and set up system simulation

Signed-off-by: dave <daveexinor@cmail.carleton.ca>

* Complete working iteration #1 of the fire-drone-swarm

Signed-off-by: dave <daveexinor@cmail.carleton.ca>

* Iteration 2: Fully functional system

Signed-off-by: dave <daveexinor@cmail.carleton.ca>

* Iteration 3: Formatted code

Signed-off-by: dave <daveexinor@cmail.carleton.ca>

* Iteration 4: Refactored cuz hubert is a maniac

Signed-off-by: dave <daveexinor@cmail.carleton.ca>

---------

Signed-off-by: DavidExinor <114293333+DavidExinor@users.noreply.github.com>
Signed-off-by: dave <daveexinor@cmail.carleton.ca>
Co-authored-by: DavidExinor <114293333+DavidExinor@users.noreply.github.com>
Co-authored-by: dave <daveexinor@cmail.carleton.ca>